# FIAP_MLE10_TC12

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.api  MODEL_CARD.md  NOTICE.md  README.md  cloudbuild.api.yaml  docker-compose.yml  dvc.yaml  pyproject.toml
.dvc/: .gitignore
.github/workflows/: ci.yml
app/: streamlit_app.py
configs/: training.yaml
data/: metrics.json  metrics_baseline.json
docs/: Apresentacao_Tech_Challenge_2_10MLE_FIAP.pptx
src/: __init__.py
src/recommender/: __init__.py
src/recommender/api/: __init__.py  inference.py  main.py  schemas.py
src/recommender/config/: __init__.py  model_config.py  settings.py
src/recommender/data/: __init__.py  dataset.py
src/recommender/models/: __init__.py  base.py  factory.py  hybrid_mlp.py
src/recommender/pipeline/: baseline.py  common.py  evaluate.py  feature_eng.py  preprocess.py  train.py
src/recommender/preprocessing/: __init__.py  base.py  pipeline.py  strategies.py
src/recommender/training/: __init__.py
tests/: test_api.py  test_baseline.py  test_dataset.py  test_hybrid_mlp.py  test_model_factory.py  test_preprocessing_strategies.py  test_registry.py
