[project]
name = "recommender"
version = "0.1.0"
description = "Sistema de recomendação de produtos e-commerce — FIAP MLE10 Tech Challenge Fase 02"
requires-python = ">=3.11"

# NOTE: dependências de prod/dev, lock file e Poetry completo entram na Etapa 2
# (Ambiente e Dependências), conforme o enunciado do Tech Challenge.

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "ANN", "D"]
ignore = ["D203", "D213", "D105", "D107"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "ANN"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
